# ipcas

./: README.md  pyproject.toml
src/ipcas/: __init__.py  ipcas.py  mean_center_operator.py  residual_projection_operator.py  stacked_linear_operator.py
tests/: test_mean_center_operator.py  test_residual_projection_operator.py  test_stacked_linear_operator.py
